# smartsim_playground

./: .gitignore  .gitmodules  GEMINI.md  aixelerator_changes.patch  env.sh  git_overview.py  install.sh  output_552513.txt  output_574806.txt  output_574815.txt  output_574817.txt  output_574820.txt  output_574949.txt  set_env_claix23.sh  set_env_claix23_cuda12.3.sh  set_env_claix23_cuda12.4.sh  swatch_test_549826.out
example_app/: CMakeLists.txt  dummy_solver.cpp  interactive.sh  main.py  readme.md  solver.sh
example_app/analysis/: analysis.ipynb
example_app/analysis/solver/: performance_results.csv  performance_results_rand_vals.csv  solver.err  solver.out  solver.sh
example_app/hello_world/: SMARTSIM_ISSUES.md  hello_world.py  hello_world_batch_ensemble.py  hello_world_cnn.py  hello_world_cnn_interactive.py  hello_world_db.py  hello_world_mpi.py  hello_world_slurm.py  simple.sh
example_app/hello_world/exp_hello_world/hello_world/: hello_world.err  hello_world.out
example_app/hello_world/exp_hello_world_batch/hello_world_batch_ensemble/: hello_world_batch_ensemble.err  hello_world_batch_ensemble.out  hello_world_batch_ensemble.sh
example_app/hello_world/exp_hello_world_batch/hello_world_batch_ensemble/hello_world_batch_ensemble_0/: hello_world_batch_ensemble_0.err  hello_world_batch_ensemble_0.out
example_app/hello_world/exp_hello_world_cnn/orchestrator/: orchestrator.err  orchestrator.out  orchestrator.sh  orchestrator_0.err  orchestrator_0.out
example_app/hello_world/exp_hello_world_cnn_interactive/orchestrator/: orchestrator_0.err  orchestrator_0.out
example_app/hello_world/exp_hello_world_db/orchestrator/: nodes-orchestrator_0-6379.conf  nodes-orchestrator_1-6379.conf  nodes-orchestrator_2-6379.conf  orchestrator.err  orchestrator.out  orchestrator.sh  orchestrator_0.err  orchestrator_0.out
example_app/hello_world/exp_hello_world_mpi/hello_world/: hello_world.err  hello_world.out
example_app/hello_world/exp_hello_world_slurm/hello_world/: hello_world.err  hello_world.out
example_app/input/: data.hdf5  model.pt  model_complex.pt
example_app/misc/: create_model.py
example_app/my_experiment/orchestrator/: orchestrator.err  orchestrator.out  orchestrator.sh  orchestrator_0.err  orchestrator_0.out
example_app/my_experiment/solver/: performance_results.csv  solver.err  solver.out  solver.sh
module_test/: CMakeLists.txt  build.sh  config_aix.toml  config_aix_cpu.toml  config_aix_gpu.toml  config_phydll.toml  config_phydll_cpu.toml  config_phydll_gpu.toml  config_smartsim_cpu.toml  config_smartsim_gpu.toml  convert_to_cpu.py  driver.py  run.sh  solver.cpp
module_test/include/: module_test_application.hpp
module_test/module_test_1779054672/orchestrator/: orchestrator_0.err  orchestrator_0.out
module_test/module_test_1779127913/orchestrator/: orchestrator_0.err  orchestrator_0.out
